feat: add migrator post

--- a/theme/templates/includes/bio.ejs
+++ b/theme/templates/includes/bio.ejs
@@ -11,7 +11,7 @@
                 visit
                 again soon.</p>
 
-            <blockquote class="quote">
+            <blockquote>
                 <p>"when you don't create things, you become defined by your tastes rather than ability. your tastes only narrow & exclude people. so create."</p>
                 <footer>— _why the lucky stiff</footer>
             </blockquote>
