--- a/theme/templates/includes/bio.ejs
+++ b/theme/templates/includes/bio.ejs
@@ -1,20 +1,19 @@
-<div class="bio">
-    <div class="container pure-g">
-        <div class="pure-u-1 pure-u-md-1-3">
-            <img src="/images/me.png" alt="A photo of Brian Douglas" class="pure-img">
-        </div>
-        <div class="pure-u-1 pure-u-md-2-3">
-            <p>Hi, I'm Brian. Welcome to my blog. Here I write about the things I have learned whilst creating stuff on
-                the
-                web.</p>
-            <p>I hope that you will find something noteworthy here, that will pique your interest, and that you will
-                visit
-                again soon.</p>
-
-            <blockquote>
-                <p>"when you don't create things, you become defined by your tastes rather than ability. your tastes only narrow & exclude people. so create."</p>
-                <footer>— _why the lucky stiff</footer>
-            </blockquote>
-        </div>
+<div class="bio content-md mx-auto my-auto">
+    <div class="bio-image-container">
+        <img
+            class="max-w-full smooth-edges"
+            src="/images/me.png"
+            alt="A photo of Brian Douglas"
+        />
+    </div>
+    <div class="bio-text-container">
+        <p>
+            Hi, I'm Brian. Welcome to my blog. Here I write about the things
+            I've learned whilst creating stuff on the web.
+        </p>
+        <p>
+            I hope that you will find something noteworthy here, that will pique
+            your interest, and that you will visit again soon.
+        </p>
     </div>
 </div>
